--- a/SVM/Support Vector Machines Project.ipynb
+++ b/SVM/Support Vector Machines Project.ipynb
@@ -7,7 +7,7 @@
     "# Support Vector Machines Project \n",
     "\n",
     "## The Data\n",
-    "For this series of lectures, we will be using the famous [Iris flower data set](http://en.wikipedia.org/wiki/Iris_flower_data_set). \n",
+    "For this project, I'll be using the famous [Iris flower data set](https://archive.ics.uci.edu/ml/datasets/iris). \n",
     "\n",
     "The Iris flower data set or Fisher's Iris data set is a multivariate data set introduced by Sir Ronald Fisher in the 1936 as an example of discriminant analysis. \n",
     "\n",
